# arm_mujoco

./: .gitignore  README.md
agility_cassie/: MJDATA.TXT  MJMODEL.TXT
src/: Arm.py  Perception.py  Robot.py  arm.cpp  arm.py  data.csv  move_arm.py  plot.py  stand.cpp  tempCodeRunnerFile.py
src/cmake/: CMakeLists.txt
xml/: scene.xml
xml/robots/: defaults.xml  go2.xml  ventionTable.xml
xml/robots/unitree_go2/: go2.xml  go2_mjx.xml
xml/robots/universal_robots_ur5e/: ur5e.xml
xml/robots/ventionTable/: ventionTable_asset.xml  ventionTable_body.xml
